--- a/poketdo/src/main/resources/static/css/load.css
+++ b/poketdo/src/main/resources/static/css/load.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
 
-/* css 설정을 위해 미리 import 해야할 내용들을 작성 */
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+/* css설정을 위해 미리 import 해야할 내용들을 작성 */
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
