--- a/poketdo/src/main/resources/static/css/test.css
+++ b/poketdo/src/main/resources/static/css/test.css
@@ -1,11 +1,3 @@
-/*
-    테스트 스타일
-    - 원하는 태그에 test 를 추가하면 해당 영역 내부가 점선으로 표시
-    - 설령 다른 테두리 설정이 있다고 해도 무시하고 처리하도록 구현
-    - div뿐 아니라 모든 비어있는 영역 태그에 적용
-    - div, main, header, footer, nav, aside, 
-        article, p, label, span, ul, ol, li, a
-*/
 [test] div,
 [test] main,
 [test] header,
@@ -19,8 +11,34 @@
 [test] ul,
 [test] ol,
 [test] li,
-[test] a
-{
-    /* !important가 추가되면 우선순위를 무시하고 적용됨 */
-    border:1px dotted black !important;
+[test] a {
+  border: 1px dotted black !important;
+}
+
+[test] main {
+  background-color: gray;
+}
+
+[test] header {
+  background-color: #ff4757;
+}
+
+[test] nav {
+  background-color: #7bed9f;
+}
+
+[test] section {
+  background-color: #70a1ff;
+}
+
+[test] aside {
+  background-color: #ffa502;
+}
+
+[test] article {
+  background-color: plum;
+}
+
+[test] footer {
+  background-color: #dfe4ea;
 }
