--- a/poketdo/src/main/resources/static/css/component.css
+++ b/poketdo/src/main/resources/static/css/component.css
@@ -31,3 +31,9 @@
 .flex-column-grow > * {
   flex-grow: 1;
 }
+
+.flex-row-justify-center {
+  display: flex;
+  justify-content: center;
+}
+/* flex-row-content */
