--- a/poketdo/src/main/resources/static/css/base.css
+++ b/poketdo/src/main/resources/static/css/base.css
@@ -2,19 +2,17 @@
 
 /* HTML 5 layout */
 main {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
 }
 header {
   height: 50px;
 }
 nav {
-  background-color: #ffd400;
-  height: 80px;
+  height: 60px;
 }
 section {
   display: flex;
-  margin: 20px auto;
 }
 .aside {
   width: 220px;
@@ -50,7 +48,7 @@ footer {
 
 /* [Component] nav-bar */
 .nav-bar {
-  height: 100%;
+  height: 75%;
   display: flex;
   text-align: center;
 }
@@ -60,6 +58,7 @@ footer {
   position: relative;
   flex-grow: 1;
 }
+/* 1차 메뉴 글씨 */
 .nav-bar > div > a {
   width: 100%;
   height: 100%;
@@ -69,6 +68,22 @@ footer {
   justify-content: center;
   text-decoration: none;
   transition: text-decoration-color 1s;
+  color: black;
+  font-size: 20px;
+}
+/* 2차 메뉴 글씨 */
+.nav-bar > div > div > div> a {
+  width: 100%;
+  height: 100%;
+  padding-top:0.5em;
+  padding-bottom: 0.5em;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  text-decoration: none;
+  transition: text-decoration-color 1s;
+  color: black;
+  font-size: 18px;
 }
 /* 메뉴 글씨 */
 .nav-bar a > * {
@@ -92,8 +107,9 @@ a:hover > *::after {
 
 /* 2차메뉴 */
 .nav-bar > div > div {
+  text-align:center;
   width: 100%;
-  background-color: #ffd400;
+  background-color: white;
   position: absolute;
   display: none;
 }
@@ -101,14 +117,7 @@ a:hover > *::after {
   display: flex;
   flex-direction: column;
 }
-.nav-bar a {
-  color: black;
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: bold;
-}
-
 /* [Component] section-w1000 */
-.section-w1000 {
-  width: 1000px;
+.section-w1200 {
+  width: 1200px;
 }
