--- a/poketdo/src/main/resources/static/css/component.css
+++ b/poketdo/src/main/resources/static/css/component.css
@@ -54,7 +54,12 @@
   display: flex;
   align-items: center;
 }
-
+.gray {
+  color: gray !important;
+}
+.blue {
+  color: #0459C1 !important;
+}
 .back-gray {
   background-color: #f9f9f9;
 }
