--- a/poketdo/src/main/resources/static/css/base.css
+++ b/poketdo/src/main/resources/static/css/base.css
@@ -4,6 +4,10 @@
 main {
   width: 100%;
   margin: 0 auto;
+  background-color: #E7EEE7;
+}
+main > * {
+  background-color: white;
 }
 header {
   height: 50px;
@@ -12,6 +16,7 @@ nav {
   height: 60px;
 }
 section {
+  width: 100%;
   display: flex;
 }
 .aside {
