--- a/poketdo/src/main/resources/static/css/layout.css
+++ b/poketdo/src/main/resources/static/css/layout.css
@@ -9,9 +9,23 @@
 }
 .float-box > .float-left {
   float: left;
+  position: relative;
 }
 .float-box > .float-right {
   float: right;
+  position: relative;
+}
+.float-left > .align-center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.float-right > .align-center{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .flex-box {
