--- a/poketdo/src/main/resources/static/css/pocketdex.css
+++ b/poketdo/src/main/resources/static/css/pocketdex.css
@@ -1,26 +1,52 @@
-@charset "UTF-8";
+.pocket-box-a{
+	text-decoration: none; 
+ 	color: inherit; 
+}
 
-/* HTML 5 layout */
-.pocket-box {
+.pocket-ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.pocket-li {
   width: 250px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+}
+.pocket-data > h3{
+	margin-left : 1.3em;
+}
+
+.pocket-data > h4 {
+	font-weight: 300;
+	color: #808080; 
+	margin-left : 1.5em;
+}
+
+.pocket-box {
+  width: 100%;
   height: 250px;
   background-color: white;
   border-radius: 20px;
   overflow: hidden;
   position: relative;
-  display: inline-block;
-  margin-left : 1em;
-  margin-right : 1em;
+  margin-bottom: 1em;
 }
-
 
 .pocket-box:hover {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
-.pocket-box > div:nth-child(1) {
+.pocket-box > div:first-child {
   width: 100%;
   height: 48%;
+  position: absolute;
+  top: 0;
   background-color: #e53935;
 }
 
@@ -32,7 +58,7 @@
   bottom: 0;
 }
 
-.pocket-box > div:nth-child(3) {
+.pocket-box > div:last-child {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -43,11 +69,46 @@
   border-radius: 20px;
 }
 
-.pocket-box > div:nth-child(3) > a > img {
-  display: block;
+.pocket-box > div:nth-child(3) > img {
+  display: inline-block;
   width: 100%;
   height: 100%;
   padding: 10%;
   object-fit: cover;
   border-radius: 20px;
 }
+
+.pocket-data {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  position: relative;
+  display: block;
+}
+
+.pocket-data span {
+	padding: 0.5em;
+	display: block;
+	line-height: 0.8em;
+	color: white;
+}
+
+.pocket-data > div {
+	display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 5%;
+}
+
+.pocket-data > div div {
+	display: inline-block;
+	text-align: center;
+	width:48%;
+	height: 30px;
+	padding: 0px;
+	background-color:gray;	
+	clip-path: polygon(8px 0, 100% 0, 100% calc(100% - 8px), calc(100% - 8px) 100%, 0 100%, 0 8px);
+}
+
+
+
