--- a/poketdo/src/main/resources/static/css/pocketdex.css
+++ b/poketdo/src/main/resources/static/css/pocketdex.css
@@ -6,7 +6,7 @@
 .pocket-ul {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -36,7 +36,6 @@
   overflow: hidden;
   position: relative;
   margin-bottom: 1em;
-  margin-right:20px;
 }
 
 .pocket-box:hover {
