--- a/poketdo/src/main/resources/static/css/base.css
+++ b/poketdo/src/main/resources/static/css/base.css
@@ -50,11 +50,12 @@ footer {
 .nav-bar {
   height: 75%;
   display: flex;
-  text-align: center;
+  justify-content:center;  
+ /*  text-align: center; */
 }
 /* 1차메뉴 */
 .nav-bar > div {
-  height: 100%;
+/*   height: 100%; */
   width: 25%; /*23_3_30 종권 수정내역_2*/
   position: relative;
   flex-grow: 1;
@@ -68,7 +69,7 @@ footer {
   height: 100%;
   padding-bottom: 3px;
   display: flex;
-  align-items: end;
+  align-items: center;
   justify-content: center;
   text-decoration: none;
   transition: text-decoration-color 1s;
