--- a/poketdo/src/main/resources/static/css/component.css
+++ b/poketdo/src/main/resources/static/css/component.css
@@ -85,7 +85,7 @@
   font-weight: bold !important;
 }
 .back-sc {
-  background-color: #ffd400;
+  background-color: #9DACE4;
   border: 1px transparent solid;
 }
 
