--- a/poketdo/src/main/resources/static/css/page.css
+++ b/poketdo/src/main/resources/static/css/page.css
@@ -268,6 +268,7 @@ section.member-login-section form {
   color: black;
   text-decoration: none;
   border: 1px black solid;
+  border-radius: 0.2em;
 }
 .pocketmonTrade-btn:hover {
   cursor: pointer;
@@ -297,6 +298,7 @@ textarea[name="replyContent"] {
 /* # Message receive */
 .message-nav {
   width: 200px;
+  padding: 0.5em;
 }
 
 .message-delete-btn,
