--- a/poketdo/src/main/resources/static/css/commons.css
+++ b/poketdo/src/main/resources/static/css/commons.css
@@ -450,7 +450,7 @@ a.form-btn {
 .table.table-border > tbody > tr > td,
 .table.table-border > tfoot > tr > th,
 .table.table-border > tfoot > tr > td {
-  border: 1px solid #a4b0be;
+  border: 1px solid #F2F4FB;
 }
 
 /*
