--- a/poketdo/src/main/resources/static/css/page.css
+++ b/poketdo/src/main/resources/static/css/page.css
@@ -298,7 +298,7 @@ textarea[name="replyContent"] {
 /* # Message receive */
 .message-nav {
   width: 200px;
-  padding: 0.5em;
+  padding: 0 0.5em;
 }
 
 .message-delete-btn,
