--- a/poketdo/src/main/resources/static/css/page.css
+++ b/poketdo/src/main/resources/static/css/page.css
@@ -235,7 +235,7 @@ section.member-login-section form {
 }
 .pocketmonTrade-search-form > *:nth-child(3) {
   width: 8%;
-  background-color: #ffd400;
+  background-color: #9DACE4;
   font-weight: bold;
   border: none;
 }
@@ -296,44 +296,63 @@ textarea[name="replyContent"] {
 }
 
 /* # Message receive */
+
 .message-nav {
   width: 200px;
   padding: 0 0.5em;
 }
 
 .message-delete-btn,
-  .message-refresh-btn {
-    cursor: pointer;
-  }
-  .message-check-one,
-  .message-check-all {
-    transform: scale(1.2);
-  }
-  a.link:hover {
-    text-decoration: underline;
-  }
+.message-refresh-btn {
+  cursor: pointer;
+}
+.message-check-one,
+.message-check-all {
+  transform: scale(1.2);
+}
+a.link:hover {
+  text-decoration: underline;
+}
 
-  .custom-spin {
-    -webkit-animation: fa-spin 0.5s infinite linear;
-    animation: fa-spin 0.5s infinite linear;
-  }
-
+.custom-spin {
+  -webkit-animation: fa-spin 0.5s infinite linear;
+  animation: fa-spin 0.5s infinite linear;
+}
 
 .message-row:hover {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 .message-row > * {
   width: 31%;
   padding: 0.5em;
-  
 }
 .message-check-column {
   width: 7%;
 }
 .message-head {
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
   height: 2em;
 }
 .message-head > * {
   box-shadow: 0 0 0 1px black;
+}
+.message-content {
+  min-height: 200px;
+}
+
+/* 보낸메세지함 */
+.message-send-cancle-btn:hover {
+  cursor: pointer;
+}
+.message-cancle-col {
+  flex-grow: 0;
+  width: 15%;
+}
+.message-content {
+  min-height: 200px;
+}
+
+/* 메세지 쓰기 */
+#message-recipient-input {
+  flex-grow: 1;
 }
