--- a/poketdo/src/main/resources/static/css/pocketdex.css
+++ b/poketdo/src/main/resources/static/css/pocketdex.css
@@ -128,7 +128,10 @@
 /* 
 	pocketdex list 속성 배경 색
  */
-.type-back-color1, .pdc-color1 {
+.type-back-color0, .pdc-color {
+	background-color: #999999;
+}
+.type-back-color1, .pdc-color {
 	background-color: #999999;
 }
 
@@ -200,6 +203,9 @@
 	background-color: #FFB1FF;
 }
 
+.pdc-color0>div {
+	background-color: #F9F9F9;
+}
 .pdc-color1>div {
 	background-color: #F9F9F9;
 }
@@ -272,6 +278,10 @@
 	background-color: #FFF4FF;
 }
 
+.pdc-color0 .icon-color i{
+	color: #CCCCCC;
+	font-size: 4em;
+}
 .pdc-color1 .icon-color i{
 	color: #CCCCCC;
 	font-size: 4em;
@@ -288,7 +298,7 @@
 }
 
 .pdc-color4 .icon-color i	{
-	color: #E5CFB2;
+	color: #D0AEE9;
 	font-size: 4em;
 }
 
@@ -361,6 +371,10 @@
 
 .pdc-color18 .icon-color i	{
 	color: #FFCCFF;
+	font-size: 4em;
+}
+.pdc-color0 .icon-color:hover i{
+	color: #999999;
 	font-size: 4em;
 }
 .pdc-color1 .icon-color:hover i{
@@ -461,18 +475,18 @@
 }
 
 /* 포켓몬 상세 컨테이너 */
-.pocket-detail-article {
+.pocketdex-article {
+	width:1200px;
 	display: flex;
 	justify-content: center;
-	width: 100%;
 }
 
 .pocket-detail-container {
 	position: relative;
 	width: 900px;
-	height: 1200px;
 	border-radius: 25px;
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
+	margin-bottom:100px;
 }
 
 .pocket-detail-container>div {
@@ -687,7 +701,8 @@
 	flex-direction: column;
 	text-align: center;
 	justify-content: center;
-	margin-top:60px;
+	margin-top:50px;
+	margin-bottom:50px;
 	text-decoration: none; /* 밑줄 없애기 */
   	color: inherit; /* 기본 색상 상속 받기 */
 }
@@ -723,6 +738,56 @@
 }
 
 
+/* 포켓몬스터 정보 수정 css*/
 
+.pocket-input-container {
+	width:500px;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	margin : 0 auto;
+	margin-bottom:50px;
+	
+}
+.pocket-input-container > div:first-child {
+	margin-bottom : 30px;
+}
+.pocket-input-container > div:nth-child(n+2):nth-child(-n+5) > div {
+	display: flex;
+	flex-direction: row;
+	justify-content: center; /* 가운데 정렬 */
+  	align-items: center; /* 가운데 정렬 */
+}
+.pocket-input-container > div:last-child button {
+	margin-top : 20px;
+	width:100%;
+}
+.pocket-input-box {
+	margin-top:10px;
+	width:50%;
+	text-align:left;
+}
+.pocket-input-box > input {
+	width:100%;
+}
+.pocket-input-box > select {
+	width:100%;
+}
 
-
+.pocket-insert-btn {
+	display: flex;
+	justify-content: center; /* 가로 중앙 정렬 */
+	align-items: center; /* 세로 중앙 정렬 */
+	width:100%;
+	height:60px;
+	margin : auto;
+	margin-bottom:50px;
+}
+.pocket-insert-btn > a {
+	display:flex;
+	width:100%;
+	height:100%;
+	font-size: 20px;
+	justify-content: center;
+	align-items: center;
+}
