--- a/poketdo/src/main/resources/static/css/page.css
+++ b/poketdo/src/main/resources/static/css/page.css
@@ -168,6 +168,8 @@ section.member-login-section form {
 /* # 포켓몬 교환 리스트 */
 .pocketmonTrade-list {
   min-height: 600px;
+  border-radius: 0.5em;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 .pocketmonTrade-a-link {
   color: black;
@@ -196,18 +198,16 @@ section.member-login-section form {
   /* text-align: center; */
 }
 .pocketmonTrade-row > *:first-child {
-  width: 13%;
 }
 .pocketmonTrade-row > *:nth-child(2) {
-  width: 45%;
   /* text-align: start; */
 }
 .pocketmonTrade-row > *:nth-child(3) {
-  width: 15%;
+  width: 45%;
   /* text-align: start; */
 }
 .pocketmonTrade-row > *:nth-child(4) {
-  width: 17%;
+  width: 15%;
 }
 .pocketmonTrade-pagination > * {
   width: 1.5em;
