--- a/poketdo/src/main/resources/static/css/seal.css
+++ b/poketdo/src/main/resources/static/css/seal.css
@@ -90,9 +90,9 @@
 	.my-seal-information>div:nth-child(3) img{
 	position:absolute;
 	bottom:40px;
-	right:5px;
+	right:10px;
 	font-size:16px;
-		border:1px solid #C2CCEE;
+	border:1px solid #C2CCEE;
 	border-radius: 5px;
 	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 	}
@@ -166,5 +166,6 @@
 	
 	.board-seal{
 	width:20px;
-	margin:5px;
+	height:20px;
+	margin-right:5px;
 	}
