--- a/poketdo/src/main/resources/static/css/seal.css
+++ b/poketdo/src/main/resources/static/css/seal.css
@@ -40,13 +40,13 @@
 	width:500px;
 	height:100px;
 	display:flex;
-	right:80px;
+	right:150px;
 	  flex-wrap: wrap;
 	  align-content: flex-start;
 	}
 	.my-seal-information>div:nth-child(3){
 	position:relative;
-	width:150px;
+	width:500px;
 	height:100px;
 	display:flex;
 	  flex-wrap: wrap;
@@ -80,16 +80,46 @@
 	right:180px;
 	font-size:16px;
 	}
-	.my-seal-information>div:nth-child(3) span{
+	.my-seal-information>div:nth-child(3) span:nth-child(1){
 	position:absolute;
-	bottom:15px;
+	bottom:35px;
 	right:10px;
 	font-size:16px;
+	}
+	.my-seal-information>div:nth-child(3) span:nth-child(2){
+	position:absolute;
+	bottom:55px;
+	right:10px;
+	font-size:16px;
+	}
+	.my-seal-information>div:nth-child(3) a{
+	position:absolute;
+	bottom:5px;
+	right:0px;
+	font-size:16px;
+	display:block;
+		width:200px;
+	height:30px;
+	}
+	.my-seal-information>div:nth-child(3) a span{
+	position:relative;
+	bottom:0px;
+	right:25px;
+	font-size:16px;
+	display:block;
+	width:200px;
+	height:30px;
+	}
+	.my-seal-information>div:nth-child(3) a i{
+	position:absolute;
+	bottom:5px;
+	right:10px;
+	font-size:20px;
 	}
 	
 	.my-seal-information>div:nth-child(3) img{
 	position:absolute;
-	bottom:40px;
+	bottom:90px;
 	right:10px;
 	font-size:16px;
 	border:1px solid #C2CCEE;
@@ -122,6 +152,7 @@
 	  width: 1000px;
 	  height: 1000px;
 	  margin : auto;
+	  margin-bottom:50px;
 	  
 	}
 	
@@ -148,14 +179,16 @@
 	margin-bottom:10px;
 	}
 	
-	.seal-admin {
+	.seal-admin,
+	.my-seal-menu {
 	display:flex;
 	width:160px;
 	align-content: flex-start;
 	justify-content: center;
 	margin-top:10px;
 	}
-	.seal-admin > div {
+	.seal-admin > div,
+	.my-seal-menu div {
 	margin: 0 auto;
 	}
 	
